--- a/templates/upload.html
+++ b/templates/upload.html
@@ -6,8 +6,21 @@
 {% endblock %}
 
 {% block content %}
+
     <form method=post enctype=multipart/form-data>
-    <input type=file name=file>
-    <input type=submit value=Upload>
+      <div class="form-group">
+        <label for="file">Image</label>
+        <input type="file" class="form-control-file" id="file" name="file">
+      </div>
+      <div class="form-group">
+        <label for="event-name">Event Name</label>
+        <input type="text" class="form-control" id="event" name="event" placeholder="Event Name">
+      </div>
+      <div class="form-check">
+        <input type="checkbox" class="form-check-input" name="detect-faces" id="detect-faces">
+        <label class="form-check-label" for="detect-faces">Detect Faces</label>
+      </div>
+      <button type="submit" class="btn btn-primary">Upload</button>
     </form>
+
 {% endblock %}
