--- a/templates/upload.html
+++ b/templates/upload.html
@@ -10,7 +10,7 @@
     <form method=post enctype=multipart/form-data>
       <div class="form-group">
         <label for="file">Image</label>
-        <input type="file" class="form-control-file" id="file" name="file">
+        <input type="file" class="form-control-file" id="file" name="file" multiple>
       </div>
       <div class="form-group">
         <label for="event-name">Event Name</label>
